--- a/mock-core-configs/etc/mock/epel-6-i386.cfg
+++ b/mock-core-configs/etc/mock/epel-6-i386.cfg
@@ -6,6 +6,7 @@ config_opts['dist'] = 'el6'  # only useful for --resultdir variable subst
 # beware: RHEL uses 6Server or 6Client
 config_opts['releasever'] = '6'
 config_opts['use_nspawn'] = False
+config_opts['macros']['%_dist'] = '.ka8zrt.el6'
 
 config_opts['yum.conf'] = """
 [main]
@@ -26,7 +27,8 @@ best=1
 [base]
 name=BaseOS
 enabled=1
-mirrorlist=http://mirrorlist.centos.org/?release=6&arch=i386&repo=os
+#mirrorlist=http://mirrorlist.centos.org/?release=6&arch=i386&repo=os
+baseurl=http://mirror.ka8zrt.com/centos/6/os/i386/
 failovermethod=priority
 gpgkey=file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-6
 gpgcheck=1
@@ -35,7 +37,8 @@ skip_if_unavailable=False
 [updates]
 name=updates
 enabled=1
-mirrorlist=http://mirrorlist.centos.org/?release=6&arch=i386&repo=updates
+#mirrorlist=http://mirrorlist.centos.org/?release=6&arch=i386&repo=updates
+baseurl=http://mirror.ka8zrt.com/centos/6/updates/i386/
 failovermethod=priority
 gpgkey=file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-6
 gpgcheck=1
