--- a/mock-core-configs/etc/mock/epel-7-x86_64.cfg
+++ b/mock-core-configs/etc/mock/epel-7-x86_64.cfg
@@ -4,6 +4,7 @@ config_opts['legal_host_arches'] = ('x86_64',)
 config_opts['chroot_setup_cmd'] = 'install @buildsys-build'
 config_opts['dist'] = 'el7'  # only useful for --resultdir variable subst
 config_opts['releasever'] = '7'
+config_opts['macros']['%_dist'] = '.ka8zrt.el7'
 
 config_opts['yum.conf'] = """
 [main]
@@ -23,7 +24,8 @@ best=1
 # repos
 [base]
 name=BaseOS
-mirrorlist=http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=os
+#mirrorlist=http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=os
+baseurl=http://mirror.ka8zrt.com/centos/7/os/x86_64/
 failovermethod=priority
 gpgkey=file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-7
 gpgcheck=1
@@ -32,7 +34,8 @@ skip_if_unavailable=False
 [updates]
 name=updates
 enabled=1
-mirrorlist=http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=updates
+#mirrorlist=http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=updates
+baseurl=http://mirror.ka8zrt.com/centos/7/updates/x86_64/
 failovermethod=priority
 gpgkey=file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-7
 gpgcheck=1
@@ -48,7 +51,8 @@ skip_if_unavailable=False
 
 [extras]
 name=extras
-mirrorlist=http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=extras
+#mirrorlist=http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=extras
+baseurl=http://mirror.ka8zrt.com/centos/7/extras/x86_64/
 failovermethod=priority
 gpgkey=file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-7
 gpgcheck=1
@@ -56,7 +60,8 @@ skip_if_unavailable=False
 
 [sclo]
 name=sclo
-baseurl=http://mirror.centos.org/centos/7/sclo/x86_64/sclo/
+#baseurl=http://mirror.centos.org/centos/7/sclo/x86_64/sclo/
+baseurl=http://mirror.ka8zrt.com/centos/7/sclo/x86_64/sclo/
 gpgkey=file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-SIG-SCLo
 gpgcheck=1
 includepkgs=devtoolset*
@@ -64,7 +69,8 @@ skip_if_unavailable=False
 
 [sclo-rh]
 name=sclo-rh
-baseurl=http://mirror.centos.org/centos/7/sclo/x86_64/rh/
+#baseurl=http://mirror.centos.org/centos/7/sclo/x86_64/rh/
+baseurl=http://mirror.ka8zrt.com/centos/7/sclo/x86_64/rh/
 gpgkey=file:///usr/share/distribution-gpg-keys/centos/RPM-GPG-KEY-CentOS-SIG-SCLo
 gpgcheck=1
 includepkgs=devtoolset*
