--- a/mock-core-configs/etc/mock/fedora-29-x86_64.cfg
+++ b/mock-core-configs/etc/mock/fedora-29-x86_64.cfg
@@ -6,6 +6,7 @@ config_opts['dist'] = 'fc29'  # only useful for --resultdir variable subst
 config_opts['extra_chroot_dirs'] = [ '/run/lock', ]
 config_opts['releasever'] = '29'
 config_opts['package_manager'] = 'dnf'
+config_opts['macros']['%_dist'] = '.ka8zrt.fc29'
 
 config_opts['yum.conf'] = """
 [main]
