Change use_nspawn to false on epel-5-i386
- Change the setting of use_nspawn to false on epel-5-i386 to correct an error
  which causes mock to raise an exception.

--- a/mock-core-configs/etc/mock/eol/epel-5-i386.cfg
+++ b/mock-core-configs/etc/mock/eol/epel-5-i386.cfg
@@ -8,6 +8,7 @@ if 'macros' not in config_opts:  config_opts['macros'] = {}
 config_opts['macros']['%__arch_install_post'] = '%{nil}'
 # beware: RHEL uses 5Server or 5Client
 config_opts['releasever'] = '5'
+config_opts['use_nspawn'] = False
 
 config_opts['yum.conf'] = """
 [main]
