Add changes to releasers
- Add local changes to releasers

--- a/.tito/releasers.conf
+++ b/.tito/releasers.conf
@@ -1,3 +1,29 @@
+[test]
+releaser = tito.release.LocalYumRepoReleaser
+srpm_disttag = .el7
+builder = tito.builder.MockBuilder
+builder.mock = epel-7-x86_64
+builder.mock_args = --enable-network
+builder.test = 1
+repo_root_dir = /repos/test/centos/7/
+
+[yum-epel7-x86_64]
+releaser = tito.release.LocalYumRepoReleaser
+srpm_disttag = .el7
+builder = tito.builder.MockBuilder
+builder.mock = epel-7-x86_64
+builder.mock_args = --enable-network
+repo_root_dir = /repos/local/centos/7/
+
+[yum-epel7-sources]
+releaser = tito.release.LocalYumRepoReleaser
+srpm_disttag = .el7
+builder = tito.builder.MockBuilder
+builder.mock = epel-7-x86_64
+builder.mock_args = --enable-network
+filetypes = srpm
+repo_root_dir = /repos/local/centos/7/sources/
+
 [fedora-git-all]
 releaser = tito.release.FedoraGitReleaser
 branches = master f27 f28 f29
